# bedello_backend

./: .gitignore  README  alembic.ini  logging.conf  mypy.ini  pyproject.toml
app/: alembic_commands.py  config.py  main.py
app/api/v1/: __init__.py  category.py
app/controller/: __init__.py  base_controller.py  category.py
app/db/: __init__.py  base.py  base_class.py
app/models/: __init__.py  category.py  customer.py  line_item.py  order.py  payment.py  product.py  product_property.py  property.py  property_item.py  shipment.py  user.py
app/schemas/: __init__.py  category.py  line_item.py  order.py  payment.py  product.py  product_property.py  property.py  property_item.py  shipment.py
migrations/: env.py
migrations/versions/: ac49b2a193ff_initialize_database.py
scripts/: run_audit.sh  start.zsh
tests/: conftest.py  helpers.py
tests/api/: test_category.py
tests/controller/: test_category.py
tests/models/: test_category.py  test_line_item.py  test_order.py  test_payment.py  test_product.py  test_property.py  test_shipment.py
tests/schemas/: test_category.py  test_payment.py  test_product.py  test_shipment.py
