[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Nicolas Mauchle <nicolas@nicolasmauchle.ch>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
sqlalchemy = "1.4.*"
psycopg2-binary = "^2.8.5"
uvicorn = "^0.11.8"
alembic = "^1.4.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
flake8-mypy = "^17.8.0"
pytest = "^6.0.1"
black = "^19.10b0"
sqlalchemy-stubs = "^0.3"
requests = "^2.24.0"
pytest-cov = "^2.10.1"
isort = "^5.4.2"


[tool.isort]
multi_line_output = "3"
include_trailing_comma = "true"
force_grid_wrap = "0"
line_length = "120"
profile = "black"

[tool.poetry.scripts]
db-upgrade = "app.alembic_commands:upgrade"
db-revision = "app.alembic_commands:revision"
server = "app.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv --cov=app --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.black]
line-length = "120"